--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "movierental.api",
   "version": "1.0.0",
-  "description": "",
+  "description": "API used to rent movies",
   "main": "index.js",
   "scripts": {
+    "start": "node src/server/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -11,7 +12,7 @@
     "url": "git+https://github.com/Leon4rdoMonteiro/movierental.api.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "Leonardo Monteiro",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/Leon4rdoMonteiro/movierental.api/issues"
@@ -22,8 +23,8 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
+    "helmet": "^4.2.0",
     "jsonwebtoken": "^8.5.1",
-    "mysql2": "^2.2.5",
-    "swagger-ui-express": "^4.1.6"
+    "mysql2": "^2.2.5"
   }
 }
